--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <div class="language"></div>
     </div>
     <div class="main">
-        <div class="intro">
-            <img src="images/intro/bg_mobile.jpg" class="mobile" alt="">
-            <img src="images/intro/bg_tablet.jpg" class="tablet" alt="">
+        <div id="Intro" class="intro">
+            <img src="images/intro/bg_mobile.jpg" class="background mobile" alt="">
+            <img src="images/intro/bg_tablet.jpg" class="background tablet" alt="">
             <div class="content_wrap grid">
                 <div class="content">
                     <div class="title">Welcome, Trainers!</div>
@@ -67,30 +67,70 @@
                 </div>
             </div>
             <div class="callout_wrap grid">
-                <div class="callout"></div>
+                <div class="callout">
+                    <div class="logo">
+                        <img src="images/nav/logo.png" alt="logo">
+                    </div>
+                    <div class="badges">
+                        <a href="https://apps.apple.com/vc/app/pok%C3%A9mon-go/id1094591345"><img src="images/download/apple.svg" alt="apple"></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo"><img src="images/download/google.png" alt="google"></a>
+                        <a href="https://galaxystore.samsung.com/detail/com.nianticlabs.pokemongo.ares"><img src="images/download/samsung.png" alt="samsung"></a>
+                    </div>
+                </div>
+            </div>
+            <div class="intro_jump_wrap">
+                <a href="#News"><img src="images/intro/arrow_down.png" alt="skip intro"></a>
             </div>
         </div>
-        <div class="new_user">
-            <img src="images/new_user/bg_mobile.png" class="mobile" alt="">
-            <img src="images/new_user/bg_tablet.jpg" class="tablet" alt="">
+        <div id="New_User" class="new_user">
+            <img src="images/new_user/bg_mobile.png" class="background mobile" alt="">
+            <img src="images/new_user/bg_tablet.jpg" class="background tablet" alt="">
+            <div class="content_wrap grid">
+                <div class="new_user_inner grid">
+                    <div class="icon">
+                        <img src="images/new_user/icon.png" alt="new user">
+                    </div>
+                    <div class="content">
+                        <div class="title">New Trainer?</div>
+                        <div class="body">Follow this simple guide on getting started with Pokémon GO!</div>
+                        <div class="button_pill">
+                            <a href="#Catch">Pokémon GO 101</a>
+                        </div>
+                    </div>
+                    <div class="image">
+                        <img src="images/new_user/image.png" alt="image">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="news">
-            <img src="images/news/bg_mobile.jpg" class="mobile" alt="">
-            <img src="images/news/bg_tablet.jpg" class="tablet" alt="">
+        <div id="News" class="news">
+            <img src="images/news/bg_mobile.jpg" class="background mobile" alt="">
+            <img src="images/news/bg_tablet.jpg" class="background tablet" alt="">
+            <div class="content_wrap grid">
+                <div class="content">
+                    <div class="title">Latest News</div>
+                    <div class="body grid">
+                        <img src="images/intro/arrow_down.png" class="loading" alt="loading news">
+                    </div>
+                    <div class="button_pill">
+                        <a href="#">More News</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="events">
-            <img src="images/events/bg_tablet.jpg" class="tablet" alt="">
+        <div id="Events" class="events">
+            <img src="images/events/bg_tablet.jpg" class="background tablet" alt="">
         </div>
-        <div class="catch">
-            <img src="images/catch/bg_tablet.jpg" class="tablet" alt="">
-            <img src="images/catch/bg_desktop.png" class="desktop" alt="">
+        <div id="Catch" class="catch">
+            <img src="images/catch/bg_tablet.jpg" class="background tablet" alt="">
+            <img src="images/catch/bg_desktop.png" class="background desktop" alt="">
             <img src="images/catch/image.jpg" class="image" alt=""/>
         </div>
-        <div class="adventure">
-            <img src="images/adventure/bg_tablet.jpg" class="tablet" alt="">
-            <img src="images/adventure/bg_desktop.jpg" class="desktop" alt="">
+        <div id="Adventure" class="adventure">
+            <img src="images/adventure/bg_tablet.jpg" class="background tablet" alt="">
+            <img src="images/adventure/bg_desktop.jpg" class="background desktop" alt="">
         </div>
-        <div class="team_go_rocket">
+        <div id="Team_Go_Rocket" class="team_go_rocket">
             <img src="images/team_go_rocket/bg.jpg" class="alldevice" alt="">
             <img src="images/team_go_rocket/image.png" class="image" alt=""/>
             <div class="content_wrap grid">
@@ -111,34 +151,20 @@
                     <div class="hidden">Cliff</div>
                     <div class="hidden">Sierra</div>
                 </div>
-                <!-- <div class="leaders">
-                    <div id="arlo" class="">
-                        <img src="images/team_go_rocket/arlo.png" class="" alt="arlo"/>
-                        <text class="name">Arlo</text>
-                    </div>
-                    <div id="cliff" class="hidden">
-                        <img src="images/team_go_rocket/cliff.png" class="" alt="cliff"/>
-                        <text class="name">Cliff</text>
-                    </div>
-                    <div id="sierra" class="hidden">
-                        <img src="images/team_go_rocket/sierra.png" class="" alt="sierra"/>
-                        <text class="name">Sierra</text>
-                    </div>
-                </div> -->
                 <div class="carousel_buttons">
                     <img onclick="CarouselButtonClick('left');" src="images/team_go_rocket/carousel_button.png" aria-disabled="true" alt="carousel_button_left"/>
                     <img onclick="CarouselButtonClick('right');" src="images/team_go_rocket/carousel_button.png" alt="carousel_button_right"/>
                 </div>
             </div>
         </div>
-        <div class="download">
-            <img src="images/download/bg_tablet.jpg" class="tablet" alt="">
-            <img src="images/download/bg_desktop.jpg" class="desktop" alt="">
+        <div id="Download" class="download">
+            <img src="images/download/bg_tablet.jpg" class="background tablet" alt="">
+            <img src="images/download/bg_desktop.jpg" class="background desktop" alt="">
         </div>
-        <div class="footer">
-            <img src="images/" class="mobile" alt="">
-            <img src="images/" class="tablet" alt="">
-            <img src="images/" class="desktop" alt="">
+        <div id="Footer" class="footer">
+            <img src="images/" class="background mobile" alt="">
+            <img src="images/" class="background tablet" alt="">
+            <img src="images/" class="background desktop" alt="">
         </div>
     </div>
 </html>
