--- a/index.html
+++ b/index.html
@@ -21,150 +21,145 @@
         
         <title>Pokémon GO++</title>
     </head>
-    <nav>
-        <div class="logo">
-            <a href="#">
-                <img src="images/nav/logo.png"/>
-            </a>
-        </div>
-        <div class="menu">
-            <a href="#">
-                <img class="menu_open" src="images/nav/menu_open.png"/>
-                <img class="menu_close" src="images/nav/menu_close.png"/>
-            </a>
-        </div>
-    </nav>
-    <div class="links">
-        <ul>
-            <li>
-                <a href="/en/play-where-you-are/">Play Where You Are</a>
-            </li>
-            <li>
-                <a href="/en/leaderboard/">LEADERBOARD</a>
-            </li>
-            <li>
-                <a href="/en/events/">EVENTS</a>
-            </li>
-            <li>
-                <a href="/en/post/">UPDATES</a>
-            </li>
-            <li>
-                <a href="https://niantic.helpshift.com/a/pokemon-go/?p=web">SUPPORT</a>
-            </li>
-            <li>
-                <a href="https://rewards.nianticlabs.com/pokemongo">Offer Redemption</a>
-            </li>
-        <div class="language"></div>
-    </div>
-    <div class="main">
-        <div id="Intro" class="intro">
-            <img src="images/intro/bg_mobile.jpg" class="background mobile" alt="">
-            <img src="images/intro/bg_tablet.jpg" class="background tablet" alt="">
-            <div class="content_wrap grid">
-                <div class="content">
-                    <div class="title">Welcome, Trainers!</div>
-                    <div class="body">Catch, train, and battle wherever you are in the real world—with friends and your Buddy Pokémon!</div>
+    <body>
+        <div class="main">
+            <nav>
+                <div class="logo">
+                    <a href="#">
+                        <img src="images/nav/logo.png"/>
+                    </a>
                 </div>
-            </div>
-            <div class="callout_wrap grid">
-                <div class="callout">
-                    <div class="logo">
-                        <img src="images/nav/logo.png" alt="logo">
-                    </div>
-                    <div class="badges">
-                        <a href="https://apps.apple.com/vc/app/pok%C3%A9mon-go/id1094591345"><img src="images/download/apple.svg" alt="apple"></a>
-                        <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo"><img src="images/download/google.png" alt="google"></a>
-                        <a href="https://galaxystore.samsung.com/detail/com.nianticlabs.pokemongo.ares"><img src="images/download/samsung.png" alt="samsung"></a>
-                    </div>
+                <div class="links">
+                    <ul>
+                    </ul>
                 </div>
-            </div>
-            <div class="intro_jump_wrap">
-                <a href="#News"><img src="images/intro/arrow_down.png" alt="skip intro"></a>
-            </div>
-        </div>
-        <div id="New_User" class="new_user">
-            <img src="images/new_user/bg_mobile.png" class="background mobile" alt="">
-            <img src="images/new_user/bg_tablet.jpg" class="background tablet" alt="">
-            <div class="content_wrap grid">
-                <div class="new_user_inner grid">
-                    <div class="icon">
-                        <img src="images/new_user/icon.png" alt="new user">
-                    </div>
+                <div class="menu">
+                    <a href="#">
+                        <img class="menu_open" src="images/nav/menu_open.png"/>
+                        <img class="menu_close" src="images/nav/menu_close.png"/>
+                    </a>
+                </div>
+                <div class="language">
+                    <button class="btn">English</button>
+                </div>
+            </nav>
+            <div id="Intro" class="intro">
+                <img src="images/intro/bg_mobile.jpg" class="background mobile" alt="">
+                <img src="images/intro/bg_tablet.jpg" class="background tablet" alt="">
+                <div class="content_wrap grid">
                     <div class="content">
-                        <div class="title">New Trainer?</div>
-                        <div class="body">Follow this simple guide on getting started with Pokémon GO!</div>
-                        <div class="button_pill">
-                            <a href="#Catch">Pokémon GO 101</a>
+                        <div class="title">Welcome, Trainers!</div>
+                        <div class="body">Catch, train, and battle wherever you are in the real world—with friends and your Buddy Pokémon!</div>
+                    </div>
+                </div>
+                <div class="callout_wrap grid">
+                    <div class="callout">
+                        <div class="logo">
+                            <img src="images/nav/logo.png" alt="logo">
+                        </div>
+                        <div class="badges">
+                            <a href="https://apps.apple.com/vc/app/pok%C3%A9mon-go/id1094591345"><img src="images/download/apple.svg" alt="apple"></a>
+                            <a href="https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo"><img src="images/download/google.png" alt="google"></a>
+                            <a href="https://galaxystore.samsung.com/detail/com.nianticlabs.pokemongo.ares"><img src="images/download/samsung.png" alt="samsung"></a>
                         </div>
                     </div>
-                    <div class="image">
-                        <img src="images/new_user/image.png" alt="image">
+                </div>
+                <div class="intro_jump_wrap">
+                    <a href="#News"><img src="images/intro/arrow_down.png" alt="skip intro"></a>
+                </div>
+            </div>
+            <div id="New_User" class="new_user">
+                <img src="images/new_user/bg_mobile.png" class="background mobile" alt="">
+                <img src="images/new_user/bg_tablet.jpg" class="background tablet" alt="">
+                <div class="content_wrap grid">
+                    <div class="new_user_inner grid">
+                        <div class="icon">
+                            <img src="images/new_user/icon.png" alt="new user">
+                        </div>
+                        <div class="content">
+                            <div class="title">New Trainer?</div>
+                            <div class="body">Follow this simple guide on getting started with Pokémon GO!</div>
+                            <div class="btn_pill">
+                                <a href="#Catch">Pokémon GO 101</a>
+                            </div>
+                        </div>
+                        <div class="image">
+                            <img src="images/new_user/image.png" alt="image">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="News" class="news">
-            <img src="images/news/bg_mobile.jpg" class="background mobile" alt="">
-            <img src="images/news/bg_tablet.jpg" class="background tablet" alt="">
-            <div class="content_wrap grid">
-                <div class="content">
-                    <div class="title">Latest News</div>
-                    <div class="body grid">
-                        <img src="images/intro/arrow_down.png" class="loading" alt="loading news">
+            <div id="News" class="news">
+                <img src="images/news/bg_mobile.jpg" class="background mobile" alt="">
+                <img src="images/news/bg_tablet.jpg" class="background tablet" alt="">
+                <div class="content_wrap grid">
+                    <div class="content">
+                        <div class="title">Latest News</div>
+                        <div class="body grid">
+                            <img src="images/intro/arrow_down.png" class="loading" alt="loading news">
+                        </div>
+                        <div class="btn_pill">
+                            <a href="#">More News</a>
+                        </div>
                     </div>
-                    <div class="button_pill">
-                        <a href="#">More News</a>
+                </div>
+            </div>
+            <div id="Events" class="events">
+                <img src="images/events/bg_tablet.jpg" class="background tablet" alt="">
+            </div>
+            <div id="Catch" class="catch">
+                <img src="images/catch/bg_tablet.jpg" class="background tablet" alt="">
+                <img src="images/catch/bg_desktop.png" class="background desktop" alt="">
+                <img src="images/catch/image.jpg" class="image" alt=""/>
+                <div class="content_wrap grid">
+                    <div class="content grid">
+                        <div class="icon"><img src="images/catch/icon.png" alt="pokeball"></div>
+                        <div class="title">Catch Pokémon</div>
+                        <div class="subtitle">Find your buddy!</div>
+                        <div class="body">Catching Pokémon is one way to collect them! You can also collect them by hatching Eggs and trading with other Trainers.</div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="Events" class="events">
-            <img src="images/events/bg_tablet.jpg" class="background tablet" alt="">
-        </div>
-        <div id="Catch" class="catch">
-            <img src="images/catch/bg_tablet.jpg" class="background tablet" alt="">
-            <img src="images/catch/bg_desktop.png" class="background desktop" alt="">
-            <img src="images/catch/image.jpg" class="image" alt=""/>
-        </div>
-        <div id="Adventure" class="adventure">
-            <img src="images/adventure/bg_tablet.jpg" class="background tablet" alt="">
-            <img src="images/adventure/bg_desktop.jpg" class="background desktop" alt="">
-        </div>
-        <div id="Team_Go_Rocket" class="team_go_rocket">
-            <img src="images/team_go_rocket/bg.jpg" class="alldevice" alt="">
-            <img src="images/team_go_rocket/image.png" class="image" alt=""/>
-            <div class="content_wrap grid">
-                <div class="content grid">
-                    <div class="icon">R</div>
-                    <div class="title">Team GO Rocket</div>
-                    <div class="body">Team GO Rocket has invaded the world of Pokémon GO! Whether you’re working on Special Research or just trying to rescue Shadow Pokémon, you can challenge Team GO Rocket and foil their plans.</div>
+            <div id="Adventure" class="adventure">
+                <img src="images/adventure/bg_tablet.jpg" class="background tablet" alt="">
+                <img src="images/adventure/bg_desktop.jpg" class="background desktop" alt="">
+            </div>
+            <div id="Team_Go_Rocket" class="team_go_rocket">
+                <img src="images/team_go_rocket/bg.jpg" class="alldevice" alt="">
+                <img src="images/team_go_rocket/image.png" class="image" alt=""/>
+                <div class="content_wrap grid">
+                    <div class="content grid">
+                        <div class="icon">R</div>
+                        <div class="title">Team GO Rocket</div>
+                        <div class="body">Team GO Rocket has invaded the world of Pokémon GO! Whether you’re working on Special Research or just trying to rescue Shadow Pokémon, you can challenge Team GO Rocket and foil their plans.</div>
+                    </div>
+                </div>
+                <div class="leaders_wrap grid">
+                    <div class="leaders">
+                        <img src="images/team_go_rocket/arlo.png" class="" alt="arlo"/>
+                        <img src="images/team_go_rocket/cliff.png" class="" alt="cliff"/>
+                        <img src="images/team_go_rocket/sierra.png" class="" alt="sierra"/>
+                    </div>
+                    <div class="names">
+                        <div>Arlo</div>
+                        <div class="hidden">Cliff</div>
+                        <div class="hidden">Sierra</div>
+                    </div>
+                    <div class="carousel_buttons">
+                        <img onclick="CarouselButtonClick('left');" src="images/team_go_rocket/carousel_button.png" aria-disabled="true" alt="carousel_button_left"/>
+                        <img onclick="CarouselButtonClick('right');" src="images/team_go_rocket/carousel_button.png" alt="carousel_button_right"/>
+                    </div>
                 </div>
             </div>
-            <div class="leaders_wrap grid">
-                <div class="leaders">
-                    <img src="images/team_go_rocket/arlo.png" class="" alt="arlo"/>
-                    <img src="images/team_go_rocket/cliff.png" class="" alt="cliff"/>
-                    <img src="images/team_go_rocket/sierra.png" class="" alt="sierra"/>
-                </div>
-                <div class="names">
-                    <div>Arlo</div>
-                    <div class="hidden">Cliff</div>
-                    <div class="hidden">Sierra</div>
-                </div>
-                <div class="carousel_buttons">
-                    <img onclick="CarouselButtonClick('left');" src="images/team_go_rocket/carousel_button.png" aria-disabled="true" alt="carousel_button_left"/>
-                    <img onclick="CarouselButtonClick('right');" src="images/team_go_rocket/carousel_button.png" alt="carousel_button_right"/>
-                </div>
+            <div id="Download" class="download">
+                <img src="images/download/bg_tablet.jpg" class="background tablet" alt="">
+                <img src="images/download/bg_desktop.jpg" class="background desktop" alt="">
+            </div>
+            <div id="Footer" class="footer">
+                <img src="images/" class="background mobile" alt="">
+                <img src="images/" class="background tablet" alt="">
+                <img src="images/" class="background desktop" alt="">
             </div>
         </div>
-        <div id="Download" class="download">
-            <img src="images/download/bg_tablet.jpg" class="background tablet" alt="">
-            <img src="images/download/bg_desktop.jpg" class="background desktop" alt="">
-        </div>
-        <div id="Footer" class="footer">
-            <img src="images/" class="background mobile" alt="">
-            <img src="images/" class="background tablet" alt="">
-            <img src="images/" class="background desktop" alt="">
-        </div>
-    </div>
+    </body>
 </html>
