company logo footer

--- a/index.html
+++ b/index.html
@@ -216,7 +216,12 @@
                             <div class="social"><a href="https://www.facebook.com/PokemonGO/" class="fa fa-facebook-f" target="_blank" rel="noopener noreferrer" role="button" aria-label="Facebook"></a></div>
                             <div class="social"><a href="https://www.youtube.com/channel/UCA698bls2pjQyiqP9N-iaeg" class="fa fa-youtube-play" target="_blank" rel="noopener noreferrer" role="button" aria-label="Youtube"></a></div>
                         </div>
-                        <div class="logos"></div>
+                        <div class="logos">
+                            <div class="logo">
+                                <a href="https://www.pokemon.com/" target="_blank" rel="noopener noreferrer">
+                                <img src="images/footer/company_logo.png" alt=""></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
